[gd_scene load_steps=5 format=3 uid="uid://c714y3xhihpl2"]

[ext_resource type="Script" uid="uid://du5643mf6mbrx" path="res://Scripts/Doneta/dough.gd" id="1_ywaft"]
[ext_resource type="Texture2D" uid="uid://cuymco2oaxh64" path="res://Sprites/Doneta/handOpen.png" id="2_1k2u3"]
[ext_resource type="Texture2D" uid="uid://0uhfl2w0q1yq" path="res://Sprites/Doneta/handClosed.png" id="3_1k2u3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ywaft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1k2u3")
}],
"loop": true,
"name": &"dough",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1k2u3")
}],
"loop": false,
"name": &"knead",
"speed": 5.0
}]

[node name="Dough" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ywaft")

[node name="Dough" type="AnimatedSprite2D" parent="."]
position = Vector2(591, 349)
scale = Vector2(0.852623, 0.852624)
sprite_frames = SubResource("SpriteFrames_ywaft")
animation = &"knead"

[node name="BarContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BackgroundBar" type="ColorRect" parent="BarContainer"]
layout_mode = 0
offset_left = 350.0
offset_top = 50.0
offset_right = 835.0
offset_bottom = 90.0

[node name="GreenZone" type="ColorRect" parent="BarContainer"]
layout_mode = 0
offset_left = 393.0
offset_top = 50.0
offset_right = 468.0
offset_bottom = 90.0
color = Color(0.00320731, 0.619953, 9.62615e-07, 1)

[node name="Slider" type="ColorRect" parent="BarContainer"]
layout_mode = 0
offset_left = 428.0
offset_top = 46.0
offset_right = 443.0
offset_bottom = 95.0
color = Color(0, 0, 0, 1)

[node name="InstructionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 420.0
offset_top = 111.0
offset_right = 748.0
offset_bottom = 134.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
